# gutachten-assist

./: # 🧠 Tauri Whisper Medical Transcri.md  .eslintrc.cjs  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DEV_TROUBLESHOOTING.md  PRODUCTION_BUILD_FIX.md  PROJECT_STRUCTURE.md  README_whisper_made.md  TASK_MASTER.md  TASK_MASTER_PROFESSIONAL_DICTATION.md  TEMPLATE_EXTRACTION_SPEC.md  TESTING.md  TESTING_COMPONENT_2.2C.md  docx_format_tauri.py  docx_renderer.py  index.html  install_cuda.bat  install_llama_cuda.py  llama_grammar_correct.py  llama_native_worker.py  llama_worker.py  offline-speech-recognition-implemented.md  package-lock.json  package.json  project_standards.md  qwen_structurer.py  readme.md  real-speech-recognition-implemented.md  requirements_made.txt  run_grammar_correct.bat  run_large_in_venv.bat  setup-whisper-wasm.md  setup_llama.py  style_profile_analyzer.py  tailwind.config.js  task_master.txt  template_extractor.py  test-whisper-component.md  (+17 more)
src/: App.css  (+2 more)
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: whisper_transcribe.py
src-tauri/src/: lib.rs  main.rs  memory_manager.rs
src-tauri/src/commands/: audio_commands.rs  document_commands.rs  docx_commands.rs  format_commands.rs  llama_commands.rs  llama_commands_old.rs.bak  mod.rs  model_commands.rs  style_profile_commands.rs  system_commands.rs  template_commands.rs
src-tauri/src/services/: audio_service.rs  file_service.rs  llama_service.rs  mod.rs  model_service.rs
src-tauri/user-data/uploads/: 17611312486430.2450675255442779_Heinen_Sarah_geb_15_03_1977_DRV_R_vom_08_04_2025_ab_Seite_2.docx  17611312500790.9709267136916069_Husen_Yakob_geb_01_01_1969_DRV_R_vom_21_02_2025_ab_Seite_2.docx  1768225127905ulkzo88ng_VerspaiMarkusPeterDRV-Rvom27.11.2025.docx  (+4 more)
(+59 files in other folders)
