[package]
name = "gutachten-assistant"
version = "2.0.0"
description = "AI-Powered Medical Documentation Desktop Application with Embedded 3GB+ AI Models"
authors = ["Medical AI Developer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gutachten_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri dependencies
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AI Model and Audio Processing dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# JSON handling for Python subprocess communication
# serde_json already included above

# Memory management for large AI models
parking_lot = "0.12"

# File and path operations
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# German medical terminology support
encoding_rs = "0.8"

# Document processing for Component 2.2B
zip = "0.6"
xml-rs = "0.8"
regex = "1.10"
base64 = "0.21"

# AI Language Model dependencies for Component 2.2C
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"

# DOCX creation for export
docx-rs = "0.4"

# System directories
dirs = "5.0"
tauri-plugin-dialog = "2.5.0"

[dev-dependencies]
tokio-test = "0.4"
